<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:checked="true"
            android:icon="@drawable/ic_shoe_formal_white_24dp"
            android:title="@string/nav_item_all_brands" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_human_male_white_24dp"
            android:title="@string/nav_item_male" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_human_female_white_24dp"
            android:title="@string/nav_item_female" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_account_child_white_24dp"
            android:title="@string/nav_item_child" />
    </group>

    <item android:title="@string/nav_group_config">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_cellphone_android_white_24dp"
                android:title="@string/nav_item_app" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_wrench_white_24dp"
                android:title="@string/nav_item_account" />
        </menu>
    </item>
</menu>
