<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/dialog_title"
            android:textColor="@color/colorDarkDialog"
            android:textSize="25sp" />

        <View
            android:id="@+id/vv_horizontal_line_01"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_title"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp"
            android:background="#e4e6e7" />

        <ImageView
            android:id="@+id/iv_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/vv_horizontal_line_01"
            android:contentDescription="@string/desc_credit_cards"
            android:scaleType="fitCenter"
            android:src="@drawable/credit_cards" />

        <View
            android:id="@+id/vv_horizontal_line_02"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/iv_cards"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp"
            android:background="#e4e6e7" />

        <TextView
            android:id="@+id/tv_card_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/vv_horizontal_line_02"
            android:text="@string/dialog_label_card_number"
            android:textColor="@color/colorDarkDialog"
            android:textSize="11sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_card_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_card_number"
            android:layout_toLeftOf="@+id/et_card_cvv"
            android:layout_toStartOf="@+id/et_card_cvv"
            android:background="@drawable/field_border_and_background_dark"
            android:hint="@string/dialog_hint_card_number"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/colorDarkDialog" />

        <TextView
            android:id="@+id/tv_card_cvv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/et_card_cvv"
            android:layout_alignStart="@+id/et_card_cvv"
            android:layout_below="@+id/vv_horizontal_line_02"
            android:text="@string/dialog_label_card_cvv"
            android:textColor="@color/colorDarkDialog"
            android:textSize="11sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_card_cvv"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_card_cvv"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/field_border_and_background_dark"
            android:hint="@string/dialog_hint_card_cvv"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/colorDarkDialog" />

        <TextView
            android:id="@+id/tv_card_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/et_card_number"
            android:layout_marginTop="12dp"
            android:text="@string/dialog_label_card_owner"
            android:textColor="@color/colorDarkDialog"
            android:textSize="11sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_card_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_card_name"
            android:background="@drawable/field_border_and_background_dark"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/colorDarkDialog" />

        <TextView
            android:id="@+id/tv_card_expired"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/et_card_name"
            android:layout_marginTop="12dp"
            android:text="@string/dialog_label_card_expire"
            android:textColor="@color/colorDarkDialog"
            android:textSize="11sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_card_expired_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_card_expired"
            android:layout_marginTop="-2dp"
            android:text="@string/dialog_label_card_expire_month"
            android:textColor="@color/colorDarkDialog"
            android:textSize="11sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/sp_card_expired_month"
            android:layout_width="44dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_card_expired_month"
            android:background="@drawable/spinner_mini_border_and_background_dark"
            android:entries="@array/months"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:popupBackground="#eee"
            android:textColor="@android:color/white"
            android:theme="@style/AppTheme.SpinnerThemeDark" />

        <TextView
            android:id="@+id/tv_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/sp_card_expired_month"
            android:layout_marginEnd="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="7dp"
            android:layout_toEndOf="@+id/sp_card_expired_month"
            android:layout_toRightOf="@+id/sp_card_expired_month"
            android:text="@string/dialog_label_card_expire_bar"
            android:textColor="@color/colorDarkDialog"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_card_expired_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/sp_card_expired_year"
            android:layout_alignStart="@+id/sp_card_expired_year"
            android:layout_alignTop="@+id/tv_card_expired_month"
            android:text="@string/dialog_label_card_expire_year"
            android:textColor="@color/colorDarkDialog"
            android:textSize="11sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/sp_card_expired_year"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_card_expired_year"
            android:layout_toEndOf="@+id/tv_bar"
            android:layout_toRightOf="@+id/tv_bar"
            android:background="@drawable/spinner_mini_border_and_background_dark"
            android:entries="@array/years"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:popupBackground="#eee"
            android:textColor="@android:color/white"
            android:theme="@style/AppTheme.SpinnerThemeDark" />

        <View
            android:id="@+id/vv_vertical_line_01"
            android:layout_width="1dp"
            android:layout_height="68dp"
            android:layout_alignTop="@+id/tv_card_expired"
            android:layout_marginBottom="6dp"
            android:layout_marginEnd="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:layout_toEndOf="@+id/sp_card_expired_year"
            android:layout_toRightOf="@+id/sp_card_expired_year"
            android:background="#e4e6e7" />

        <TextView
            android:id="@+id/tv_buy_parcels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tv_card_expired"
            android:layout_toEndOf="@+id/vv_vertical_line_01"
            android:layout_toRightOf="@+id/vv_vertical_line_01"
            android:text="@string/dialog_label_card_total_parcels"
            android:textColor="@color/colorDarkDialog"
            android:textSize="11sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/sp_buy_parcels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_buy_parcels"
            android:layout_toEndOf="@+id/vv_vertical_line_01"
            android:layout_toRightOf="@+id/vv_vertical_line_01"
            android:background="@drawable/spinner_mini_border_and_background_dark"
            android:entries="@array/parcels"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:popupBackground="#eee"
            android:textColor="@android:color/white"
            android:theme="@style/AppTheme.SpinnerThemeDark" />

        <Button
            android:id="@+id/bt_finish_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/vv_vertical_line_01"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignStart="@+id/vv_vertical_line_01"
            android:layout_below="@+id/sp_buy_parcels"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_blue_background"
            android:text="@string/label_bt_finish_buy"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/bt_finish_buy"
            android:text="@string/dialog_label_total"
            android:textColor="@color/colorDarkDialog"
            android:textSize="11sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_total"
            android:layout_marginTop="-4dp"
            android:textColor="@color/colorDarkDialog"
            android:textSize="21sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tv_total_parcels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_total_price"
            android:layout_marginTop="-4dp"
            android:text="@string/dialog_label_parcels_without_taxes"
            android:textColor="@color/colorDarkDialog"
            android:textSize="11sp"
            android:textStyle="bold" />

    </RelativeLayout>
</ScrollView>